update the urls

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 			            <h2> DevOps & Platform Engineer </h2>
 						
 			            <p><a href="https://www.youtube.com/@AmanOps" target="_blank" class="btn btn-primary py-3 px-4">YouTube</a> 
-							<a href="https://github.com/amanpatelitofficial" target="_blank" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+							<a href="https://github.com/amanpatelit" target="_blank" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -454,33 +454,33 @@
         <div class="row d-flex">
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/amanpatelofficial-devops" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
+              <a href="https://github.com/amanpatelit" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/amanpatelofficial-devops">How to Crack AWS Solutions Architect Associate Exam</a></h3>
+                <h3 class="heading"><a href="https://github.com/amanpatelit">How to Crack AWS Solutions Architect Associate Exam</a></h3>
                 <p>AWS is crucial for businesses due to its market dominance, scalability, cost-effectiveness, global infrastructure, reliability, security, innovation, ecosystem, enabling digital transformation, enterprise adoption, and economic impact..</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="https://github.com/amanpatelofficial-devops" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
+              <a href="https://github.com/amanpatelit" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/amanpatelofficial-devops">DevSecOps is an approach that integrates security practices within the DevOps process to ensure secure software development and operations.</a></h3>
+                <h3 class="heading"><a href="https://github.com/amanpatelit">DevSecOps is an approach that integrates security practices within the DevOps process to ensure secure software development and operations.</a></h3>
                 <p>DevSecOps, short for Development, Security, and Operations, is an approach that integrates security practices into every stage of the DevOps lifecycle to ensure secure software development and operations. It emphasizes te and best practices.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/amanpatelofficial-devops" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
+              <a href="https://github.com/amanpatelit" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/amanpatelofficial-devops">Power BI Sales dashboard Project for Beginners</a></h3>
+                <h3 class="heading"><a href="https://github.com/amanpatelit">Power BI Sales dashboard Project for Beginners</a></h3>
                 <p>Designed a power bi dashboard for Madhav Store to track and analyze the online sales data acorss India.</p>
               </div>
             </div>
@@ -495,14 +495,14 @@
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/amanpatelitofficial">Sales Forecast- Time Series Forecasting</a></h3>
+				  <h3 class="heading"><a href="https://github.com/amanpatelit">Sales Forecast- Time Series Forecasting</a></h3>
 				  <p>Used multiple machine learning models to forecast sales (retail store) and performed time series analysis.</p>
 				</div>
 			  </div>
 			</div>
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/amanpatelofficial-devops" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
+				<a href="https://github.com/amanpatelit" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
@@ -560,7 +560,7 @@
 						<h2>More projects on<span> Github  </span> </h2>
 						<div class="heading"> <h4> I love to solve business problems & uncover hidden data stories </h4>
 						<br>
-						<p><a href="https://github.com/amanpatelitofficial" class="btn btn-primary py-3 px-5">GitHub</a></p>
+						<p><a href="https://github.com/amanpatelit" class="btn btn-primary py-3 px-5">GitHub</a></p>
 						</div>
 					</div>
 				</div>
@@ -633,7 +633,7 @@
 					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/amanpatelofficial/"><span class="icon-linkedin"></span></a></li>  
 					  <li class="ftco-animate"><a href="https://twitter.com/amanpatelitofficial"><span class="icon-twitter"></span></a></li>
 					  <li class="ftco-animate"><a href="https://twitter.com/amanpatelitofficial"><span class="icon-facebook"></span></a></li>
-				      <li class="ftco-animate"><a href="https://www.instagram.com/amanpatelitofficial/"><span class="icon-instagram"></span></a></li>
+				      <li class="ftco-animate"><a href="https://www.instagram.com/itsamanpatel_"><span class="icon-instagram"></span></a></li>
 					</ul>
 				<br>
 		   </div>
