--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 			<div class="col-md-6 col-sm-4">
 				<div class="resume-wrap ftco-animate">
 					<span class="date">2020–2022</span>
-					<h2>Bachelor of Engineering</h2>
+					<h2>Bachelor of Science</h2>
 					<span class="position">Kanpur University</span>
 					<p class="mt-4">Grade: First-Class Distinction</p>
 				</div>
