--- a/index.html
+++ b/index.html
@@ -480,8 +480,8 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/amanpatelit">From Outage to Uptime: How DevOps Turns Failure Into Resilience.</a></h3>
-                <p>Outages are never fun — red dashboards, alert storms, and that sudden adrenaline rush when production goes down.</p>
+                <h3 class="heading"><a href="https://github.com/amanpatelit">How to Handle DevOps Outages Like a Pro.</a></h3>
+                <p>When an outage hits, the first rule is simple — stay calm and communicate clearly. Panic spreads faster than errors. Begin by acknowledging the issue and notifying relevant teams via established incident channels (Slack, PagerDuty). Immediately assign clear ownership — one lead engineer to coordinate, one to investigate logs/metrics, and one to communicate with stakeholders.</p>
               </div>
             </div>
           </div>
