--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
         <div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Projects</h1>
-            <h2 class="mb-4">Projects</h2>
+            <h2 class="mb-4">DevSecOps Workflow</h2>
             <p>Below are the sample Clouds & DevSecOps projects on AWS with Security</p>
           </div>
         </div>
