--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
 								<p class="mb-4">
-									<span class="number" data-number="15">0</span> <span>+</span>
+									<span class="number" data-number="12">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
 								<p><a href="https://www.linkedin.com/in/amanpatelofficial/" target="_blank" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
@@ -431,13 +431,14 @@
 				</div>
 			</div>
 		</div>
-		
+         <!--
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
     				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
-    			</div>
     		</div>
     	</div>
+	-->	
+	
     </section>
 
    
@@ -571,7 +572,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://0101010101">+ 0 101 0101 101</a></p>
+	            <p><a href="tel://0101010101">+91 9559640177</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -588,7 +589,7 @@
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-globe"></span>
           		</div>
-          		<h3 class="mb-4">Github Link</h3>
+          		<h3 class="mb-4">Github</h3>
 	            <p><a href="#">For Cloud & DevOps</a></p>
 	          </div>
           </div>
@@ -606,8 +607,6 @@
 					  <li class="ftco-animate normal-txt">Find me on  </li>
 					  <li class="ftco-animate"><a href="https://www.youtube.com/@AmanOps"><span class="icon-youtube"></span></a></li>
 					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/amanpatelofficial/"><span class="icon-linkedin"></span></a></li>  
-					  <li class="ftco-animate"><a href="https://twitter.com/amanpatelitofficial"><span class="icon-twitter"></span></a></li>
-					  <li class="ftco-animate"><a href="https://twitter.com/amanpatelitofficial"><span class="icon-facebook"></span></a></li>
 				      <li class="ftco-animate"><a href="https://www.instagram.com/itsamanpatel_"><span class="icon-instagram"></span></a></li>
 					</ul>
 				<br>
@@ -624,7 +623,7 @@
 			<div class="col-md-12 text-center">
   
 			  <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-	Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Let's Code & Deploy <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://amansdlc.com" target="_blank">amansdlc</a>
+	Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Let's Code & Deploy <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://amansdlc.com" target="_blank">amansdlc.com</a>
 	<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		  </div>
