obtimized the code

--- a/fonts/flaticon/font/flaticon.html
+++ b/fonts/flaticon/font/flaticon.html
@@ -8,6 +8,7 @@
 <html>
 
 <head>
+    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">
     <title>Flaticon WebFont</title>
     <link href="http://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="flaticon.css">
@@ -300,6 +301,8 @@
         }
     }
     </style>
+    <meta name="description" content="DevOps Portfolio — projects, skills, and contact.">
+    <link rel="stylesheet" href="css/optimized.css">
 </head>
 
 <body class="characters-off">
