--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
 </style>
 
 
-  </head>
+      <meta name="description" content="DevOps Portfolio — projects, skills, and contact.">
+    <link rel="stylesheet" href="css/optimized.css">
+</head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 	  
 	  
@@ -161,7 +163,7 @@
 						<!-- Element to contain animated typing -->
 						<span id="typing-animation"></span>
 
-						<script>
+						<script defer>
 
 						// Initialize the typing animation
 						const typingAnimationElement = document.getElementById('typing-animation');
@@ -219,7 +221,7 @@
 								<div class="row">
 									<div class="col-sm-6 col-md-5">
 									  <div class="about-img">
-										<img src="images/about-me.png" class="img-fluid rounded b-shadow-a" alt="">
+										<img decoding="async" loading="lazy" src="images/about-me.png" class="img-fluid rounded b-shadow-a" alt="">
 									  </div>
 									</div>
 									<!-- Details next to profile image -->
@@ -240,7 +242,7 @@
 										<div class="progress-bar" id="Networking" role="progressbar" aria-valuenow="85" aria-valuemin="0"
 											aria-valuemax="100"></div>
 									</div>
-									<script>
+									<script defer>
 										var progressBar = document.getElementById("Networking");
 
 										
@@ -623,7 +625,7 @@
 			<div class="col-md-12 text-center">
   
 			  <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-	Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Let's Code & Deploy <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://amansdlc.com" target="_blank">amansdlc.com</a>
+	Copyright &copy;<script defer>document.write(new Date().getFullYear());</script> All rights reserved | Let's Code & Deploy <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://amansdlc.com" target="_blank">amansdlc.com</a>
 	<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		  </div>
@@ -636,20 +638,20 @@
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
 
 
-  <script src="js/jquery.min.js"></script>
-  <script src="js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/jquery.easing.1.3.js"></script>
-  <script src="js/jquery.waypoints.min.js"></script>
-  <script src="js/jquery.stellar.min.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/jquery.magnific-popup.min.js"></script>
-  <script src="js/aos.js"></script>
-  <script src="js/jquery.animateNumber.min.js"></script>
-  <script src="js/scrollax.min.js"></script>
+  <script defer src="js/jquery.min.js"></script>
+  <script defer src="js/jquery-migrate-3.0.1.min.js"></script>
+  <script defer src="js/popper.min.js"></script>
+  <script defer src="js/bootstrap.min.js"></script>
+  <script defer src="js/jquery.easing.1.3.js"></script>
+  <script defer src="js/jquery.waypoints.min.js"></script>
+  <script defer src="js/jquery.stellar.min.js"></script>
+  <script defer src="js/owl.carousel.min.js"></script>
+  <script defer src="js/jquery.magnific-popup.min.js"></script>
+  <script defer src="js/aos.js"></script>
+  <script defer src="js/jquery.animateNumber.min.js"></script>
+  <script defer src="js/scrollax.min.js"></script>
   
-  <script src="js/main.js"></script>
+  <script defer src="js/main.js"></script>
     
   </body>
 </html>
