update instgram id

--- a/index.html
+++ b/index.html
@@ -609,15 +609,12 @@
 					  <li class="ftco-animate normal-txt">Find me on  </li>
 					  <li class="ftco-animate"><a href="https://www.youtube.com/@AmanOps"><span class="icon-youtube"></span></a></li>
 					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/amanpatelofficial/"><span class="icon-linkedin"></span></a></li>  
-				      <li class="ftco-animate"><a href="https://www.instagram.com/itsamanpatel_"><span class="icon-instagram"></span></a></li>
+				      <li class="ftco-animate"><a href="https://www.instagram.com/amanpatelit"><span class="icon-instagram"></span></a></li>
 					</ul>
 				<br>
 		   </div>
    </div>
  </section>
-
-
- 
 	
     <footer class="ftco-footer ftco-section">
 		<div class="container">
