--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 			            <h2> DevOps & Platform Engineer </h2>
 						
 			            <p><a href="https://www.youtube.com/@AmanOps" target="_blank" class="btn btn-primary py-3 px-4">YouTube</a> 
-							<a href="https://github.com/amanpatel.it" target="_blank" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+							<a href="https://github.com/amanpatelit" target="_blank" class="btn btn-white btn-outline-white py-3 px-4">Github</a></p>
 		            </div>
 		          </div>
 	        	</div>
