updated the experience

--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
 										<p><span class="title-s">Name: </span> <span> Aman Patel </span></p>
-										<p><span class="title-s">Job Role: </span> <span> DevOps & Platform Engineer </span></p>
-										<p><span class="title-s">Experience: </span> <span> 4 Years 1 Months </span></p>
-										<p><span class="title-s">Address: </span> <span> New Delhi, India </span></p>
+										<p><span class="title-s">Job Role: </span> <span> Sr.DevOps & Platform Engineer </span></p>
+										<p><span class="title-s">Experience: </span> <span> 5+ years </span></p>
+										<p><span class="title-s">Address: </span> <span> Noida, India </span></p>
 									  </div>
 									</div>
 								  </div>
@@ -310,10 +310,8 @@
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Profile:</span> <span>Multi Cloud DevOps Engineer</span></li>
 									<li class="d-flex"><span>Domain:</span> <span>Open Source Techonogies, Multi Clouds DevOps, GitOps</span></li>
-									<li class="d-flex"><span>Education:</span> <span>Masters in Computer Application </span></li>
+									<li class="d-flex"><span>Education:</span> <span>Bsc in IT </span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi</span></li>
-									<li class="d-flex"><span>DevSecOps Tools:</span> <span>Whole Linux environment, Cloud & DevSecOps Environment</span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span>Cloud, Excel, Git, JIRA & SEO</span></li>
 									<li class="d-flex"><span>Interest:</span> <span> Open Source Technologies, Travel Photography, Teaching</span></li>
 									
 								</ul>
@@ -345,7 +343,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>Seasoned Clouds & DevSecOps with 4+ years of experience driving business strategies through the Clouds & DevSecOps. Proven expertise in Cloud Infra , statistical analysis, machine learning algorithms and project management.</p>
+            <p>Seasoned Clouds & DevSecOps with 5+ years of experience driving business strategies through the Clouds & DevSecOps. Proven expertise in Cloud Infra , statistical analysis, machine learning algorithms and project management.</p>
           </div>
         </div>
 
@@ -361,11 +359,12 @@
 					<span class="date">2021-2022</span>
 					<h2> DevOps Admin</h2>
 					<span class="position">IP Sloutions Technologies</span>
-					<p class="mt-4">🚀 DevOps Admin | Cloud Infrastructure Admin | Automation Engineer .
+					<p class="mt-4"> DevOps Admin | Cloud Infrastructure Admin | Automation Engineer .
 						<ul>
-							<li>Analysed ad campaigns, clickstream, and customer surveys data, identified an increasing demand and launched a strategic product line.</li>
-							<li>Developed time series forecasting models to predict sales and optimize marketing budgets, got model performance of 92%.</li>
-							<li>Designed and executed A/B tests, performed rigorous statistical analysis. Led to 20% MoM increase in the conversion rate.</li>
+							<li>Migrated the RHEL Server form RHEL & to RHEL 8</li>
+							<li>Setup the Jenkins CI/CD for Production micro-servies</li>
+							<li>Reduce the size of docker image more then 80% for all the micro-servives running on production.</li>
+							<li>implemented the sonar for the scanning & improving the code quality</li>
 						</ul>
 					</p>
 				</div>
@@ -376,7 +375,7 @@
 					<span class="date">2022 - 2024</span>
 					<h2>DevOps Specialist</h2>
 					<span class="position">Opstree</span>
-					<p class="mt-4">🚀 DevOps Engineer | Cloud Infrastructure Consultant | Automation Engineer. 
+					<p class="mt-4"> DevOps Engineer | Cloud Infrastructure Consultant | Automation Engineer. 
 						<ul>
 							<li>Designed and deployed EKS clusters to streamline operations and enhance application scalability.</li>
 							<li>As a dedicated DevOps Engineer and Platform Specialist, I specialize in building scalable, secure, and automated infrastructures that empower organizations to innovate with confidence. With expertise in cloud platforms like AWS and Google Cloud, I design and implement solutions that enhance performance and reliability.</li>
@@ -391,7 +390,7 @@
 					<span class="date">2024-Till Date</span>
 					<h2>Software Engineer</h2>
 					<span class="position">Quokkalabs LLP</span>
-					<p class="mt-4">🚀 DevOps Engineer & Platform Specialist @QL | Cloud Infrastructure Consultant | GitOps Consultant
+					<p class="mt-4"> DevOps Engineer & Platform Specialist @QL | Cloud Infrastructure Consultant | GitOps Consultant
 						<ul>
 							<li>I bring a wealth of expertise in automating complex workflows, fortifying system security, and crafting resilient, scalable infrastructures that stand the test of time. With a passion for innovation, I specialize in streamlining deployments and delivering seamless, high-performance digital experiences that exceed expectations..</li>
 							<li>Empowering businesses with cutting-edge DevOps, DevSecOps, Platform Engineering, and GitOps solutions. I specialize in automating workflows, enhancing system security, and building resilient, scalable infrastructures. Passionate about driving innovation, streamlining deployments, and delivering seamless digital experiences. Let’s collaborate to transform ideas into impactful solutions!.</li>
@@ -404,7 +403,7 @@
 
 			</div>
 		</div>
-
+         
 		<br>
 		<br>
 
