updated the experience

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 							<li>Migrated the RHEL Server form RHEL & to RHEL 8</li>
 							<li>Setup the Jenkins CI/CD for Production micro-servies</li>
 							<li>Reduce the size of docker image more then 80% for all the micro-servives running on production.</li>
-							<li>implemented the sonar for the scanning & improving the code quality</li>
+							<li>implemented the sonar for the scanning & improving the code quality.</li>
 						</ul>
 					</p>
 				</div>
@@ -375,7 +375,7 @@
 					<span class="date">2022 - 2024</span>
 					<h2>DevOps Specialist</h2>
 					<span class="position">Opstree</span>
-					<p class="mt-4"> DevOps Engineer | Cloud Infrastructure Consultant | Automation Engineer. 
+					<p class="mt-4"> SRE- DevOps Engineer 
 						<ul>
 							<li>Designed and deployed EKS clusters to streamline operations and enhance application scalability.</li>
 							<li>As a dedicated DevOps Engineer and Platform Specialist, I specialize in building scalable, secure, and automated infrastructures that empower organizations to innovate with confidence. With expertise in cloud platforms like AWS and Google Cloud, I design and implement solutions that enhance performance and reliability.</li>
@@ -388,9 +388,9 @@
 			<div class="col-md-6">
 				<div class="resume-wrap ftco-animate">
 					<span class="date">2024-Till Date</span>
-					<h2>Software Engineer</h2>
+					<h2>Software Engineer L2</h2>
 					<span class="position">Quokkalabs LLP</span>
-					<p class="mt-4"> DevOps Engineer & Platform Specialist @QL | Cloud Infrastructure Consultant | GitOps Consultant
+					<p class="mt-4"> DevOps Engineer & Platform Specialist @QL 
 						<ul>
 							<li>I bring a wealth of expertise in automating complex workflows, fortifying system security, and crafting resilient, scalable infrastructures that stand the test of time. With a passion for innovation, I specialize in streamlining deployments and delivering seamless, high-performance digital experiences that exceed expectations..</li>
 							<li>Empowering businesses with cutting-edge DevOps, DevSecOps, Platform Engineering, and GitOps solutions. I specialize in automating workflows, enhancing system security, and building resilient, scalable infrastructures. Passionate about driving innovation, streamlining deployments, and delivering seamless digital experiences. Let’s collaborate to transform ideas into impactful solutions!.</li>
