updated the experience

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 					<span class="date">2021-2022</span>
 					<h2> DevOps Admin</h2>
 					<span class="position">IP Sloutions Technologies</span>
-					<p class="mt-4"> DevOps Admin | Cloud Infrastructure Admin | Automation Engineer .
+					<p class="mt-4"> DevOps Admin 
 						<ul>
 							<li>Migrated the RHEL Server form RHEL & to RHEL 8</li>
 							<li>Setup the Jenkins CI/CD for Production micro-servies</li>
