updated the experience

--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/amanpatel.it">How to Crack AWS Solutions Architect Associate Exam</a></h3>
+                <h3 class="heading"><a href="https://github.com/amanpatelit">How to Crack AWS Solutions Architect Associate Exam</a></h3>
                 <p>AWS is crucial for businesses due to its market dominance, scalability, cost-effectiveness, global infrastructure, reliability, security, innovation, ecosystem, enabling digital transformation, enterprise adoption, and economic impact..</p>
               </div>
             </div>
@@ -471,18 +471,18 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/amanpatel.it">DevSecOps is an approach that integrates security practices within the DevOps process to ensure secure software development and operations.</a></h3>
+                <h3 class="heading"><a href="https://github.com/amanpatelit">DevSecOps is an approach that integrates security practices within the DevOps process to ensure secure software development and operations.</a></h3>
                 <p>DevSecOps, short for Development, Security, and Operations, is an approach that integrates security practices into every stage of the DevOps lifecycle to ensure secure software development and operations. It emphasizes te and best practices.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://github.com/amanpatel.it" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
+              <a href="https://github.com/amanpatelit" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/amanpatel.it">How to Handle DevOps Outages Like a Pro.</a></h3>
+                <h3 class="heading"><a href="https://github.com/amanpatelit">How to Handle DevOps Outages Like a Pro.</a></h3>
                 <p>When an outage hits, the first rule is simple — stay calm and communicate clearly. Panic spreads faster than errors. Begin by acknowledging the issue and notifying relevant teams via established incident channels (Slack, PagerDuty). Immediately assign clear ownership — one lead engineer to coordinate, one to investigate logs/metrics, and one to communicate with stakeholders.</p>
               </div>
             </div>
@@ -609,6 +609,7 @@
 					  <li class="ftco-animate"><a href="https://www.youtube.com/@AmanOps"><span class="icon-youtube"></span></a></li>
 					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/amanpatelofficial/"><span class="icon-linkedin"></span></a></li>  
 				      <li class="ftco-animate"><a href="https://www.instagram.com/amanpatel.it"><span class="icon-instagram"></span></a></li>
+					  <li class="ftco-animate"><a href="https://www.github.com/amanpatelit"><span class="icon-github"></span></a></li>
 					</ul>
 				<br>
 		   </div>
